--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-theme="pds-light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co.com/cSRSTXcj/DSP-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co.com/FLvrMddq/DSP-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DEBATING SOCIETY</title>
+    <title>Debating Society</title>
   </head>
   <body>
     <div id="root"></div>
